src/test/ui/type-alias-impl-trait/no_inferrable_concrete_type.stderr
error: unconstrained opaque type
  --> $DIR/no_inferrable_concrete_type.rs:6:12
   |
LL | type Foo = impl Copy;
   |            ^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to previous error

